# wanted-pre-onboarding-backend

./: .gitignore  README.md  manage.py  pyproject.toml
articles/: models.py  serializers.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_article_updated_at.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
wanted/: settings.py  urls.py  wsgi.py
